# center-lane-calculation

./: CMakeLists.txt  README  get_input_points.m  get_middle_line.m  main.cpp  main.py  sam.py  scb.py  scratch.py
output/: skel_coords_1702370792.414842.txt
src/: common.h  methods.cpp  methods.h  preprocess.cpp  preprocess.h  spline.cpp  spline.h  thinning.cpp  thinning.h  tictoc.h  x_axis_searching.cpp  x_axis_searching.h
